minor report update. adding hss snyder graph

--- a/main_report.html
+++ b/main_report.html
@@ -329,23 +329,23 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
 <div aria-describedby="tbl-matrixplot-rainfall-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell-output-display">
 <div>
-<div id="hycmsmdwgn" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#hycmsmdwgn table {
+<div id="vksbrwsnhb" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#vksbrwsnhb table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#hycmsmdwgn thead, #hycmsmdwgn tbody, #hycmsmdwgn tfoot, #hycmsmdwgn tr, #hycmsmdwgn td, #hycmsmdwgn th {
+#vksbrwsnhb thead, #vksbrwsnhb tbody, #vksbrwsnhb tfoot, #vksbrwsnhb tr, #vksbrwsnhb td, #vksbrwsnhb th {
   border-style: none;
 }
 
-#hycmsmdwgn p {
+#vksbrwsnhb p {
   margin: 0;
   padding: 0;
 }
 
-#hycmsmdwgn .gt_table {
+#vksbrwsnhb .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -371,12 +371,12 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-left-color: #D3D3D3;
 }
 
-#hycmsmdwgn .gt_caption {
+#vksbrwsnhb .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#hycmsmdwgn .gt_title {
+#vksbrwsnhb .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -388,7 +388,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-width: 0;
 }
 
-#hycmsmdwgn .gt_subtitle {
+#vksbrwsnhb .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -400,7 +400,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-top-width: 0;
 }
 
-#hycmsmdwgn .gt_heading {
+#vksbrwsnhb .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -412,13 +412,13 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#hycmsmdwgn .gt_bottom_border {
+#vksbrwsnhb .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#hycmsmdwgn .gt_col_headings {
+#vksbrwsnhb .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -433,7 +433,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#hycmsmdwgn .gt_col_heading {
+#vksbrwsnhb .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -453,7 +453,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   overflow-x: hidden;
 }
 
-#hycmsmdwgn .gt_column_spanner_outer {
+#vksbrwsnhb .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -465,15 +465,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 4px;
 }
 
-#hycmsmdwgn .gt_column_spanner_outer:first-child {
+#vksbrwsnhb .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#hycmsmdwgn .gt_column_spanner_outer:last-child {
+#vksbrwsnhb .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#hycmsmdwgn .gt_column_spanner {
+#vksbrwsnhb .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -485,11 +485,11 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   width: 100%;
 }
 
-#hycmsmdwgn .gt_spanner_row {
+#vksbrwsnhb .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#hycmsmdwgn .gt_group_heading {
+#vksbrwsnhb .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -515,7 +515,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   text-align: left;
 }
 
-#hycmsmdwgn .gt_empty_group_heading {
+#vksbrwsnhb .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -530,15 +530,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   vertical-align: middle;
 }
 
-#hycmsmdwgn .gt_from_md > :first-child {
+#vksbrwsnhb .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#hycmsmdwgn .gt_from_md > :last-child {
+#vksbrwsnhb .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#hycmsmdwgn .gt_row {
+#vksbrwsnhb .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -557,7 +557,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   overflow-x: hidden;
 }
 
-#hycmsmdwgn .gt_stub {
+#vksbrwsnhb .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -570,7 +570,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#hycmsmdwgn .gt_stub_row_group {
+#vksbrwsnhb .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -584,15 +584,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   vertical-align: top;
 }
 
-#hycmsmdwgn .gt_row_group_first td {
+#vksbrwsnhb .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#hycmsmdwgn .gt_row_group_first th {
+#vksbrwsnhb .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#hycmsmdwgn .gt_summary_row {
+#vksbrwsnhb .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -602,16 +602,16 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#hycmsmdwgn .gt_first_summary_row {
+#vksbrwsnhb .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#hycmsmdwgn .gt_first_summary_row.thick {
+#vksbrwsnhb .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#hycmsmdwgn .gt_last_summary_row {
+#vksbrwsnhb .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -621,7 +621,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#hycmsmdwgn .gt_grand_summary_row {
+#vksbrwsnhb .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -631,7 +631,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#hycmsmdwgn .gt_first_grand_summary_row {
+#vksbrwsnhb .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -641,7 +641,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-top-color: #D3D3D3;
 }
 
-#hycmsmdwgn .gt_last_grand_summary_row_top {
+#vksbrwsnhb .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -651,11 +651,11 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#hycmsmdwgn .gt_striped {
+#vksbrwsnhb .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#hycmsmdwgn .gt_table_body {
+#vksbrwsnhb .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -664,7 +664,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#hycmsmdwgn .gt_footnotes {
+#vksbrwsnhb .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -678,7 +678,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#hycmsmdwgn .gt_footnote {
+#vksbrwsnhb .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -687,7 +687,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#hycmsmdwgn .gt_sourcenotes {
+#vksbrwsnhb .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -701,7 +701,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#hycmsmdwgn .gt_sourcenote {
+#vksbrwsnhb .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -709,63 +709,63 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#hycmsmdwgn .gt_left {
+#vksbrwsnhb .gt_left {
   text-align: left;
 }
 
-#hycmsmdwgn .gt_center {
+#vksbrwsnhb .gt_center {
   text-align: center;
 }
 
-#hycmsmdwgn .gt_right {
+#vksbrwsnhb .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#hycmsmdwgn .gt_font_normal {
+#vksbrwsnhb .gt_font_normal {
   font-weight: normal;
 }
 
-#hycmsmdwgn .gt_font_bold {
+#vksbrwsnhb .gt_font_bold {
   font-weight: bold;
 }
 
-#hycmsmdwgn .gt_font_italic {
+#vksbrwsnhb .gt_font_italic {
   font-style: italic;
 }
 
-#hycmsmdwgn .gt_super {
+#vksbrwsnhb .gt_super {
   font-size: 65%;
 }
 
-#hycmsmdwgn .gt_footnote_marks {
+#vksbrwsnhb .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#hycmsmdwgn .gt_asterisk {
+#vksbrwsnhb .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#hycmsmdwgn .gt_indent_1 {
+#vksbrwsnhb .gt_indent_1 {
   text-indent: 5px;
 }
 
-#hycmsmdwgn .gt_indent_2 {
+#vksbrwsnhb .gt_indent_2 {
   text-indent: 10px;
 }
 
-#hycmsmdwgn .gt_indent_3 {
+#vksbrwsnhb .gt_indent_3 {
   text-indent: 15px;
 }
 
-#hycmsmdwgn .gt_indent_4 {
+#vksbrwsnhb .gt_indent_4 {
   text-indent: 20px;
 }
 
-#hycmsmdwgn .gt_indent_5 {
+#vksbrwsnhb .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -1276,6 +1276,23 @@ Gambar&nbsp;11: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 
 </section>
 <section id="debit-banjir-di-lokasi-proyek" class="level2" data-number="6.2">
 <h2 data-number="6.2" class="anchored" data-anchor-id="debit-banjir-di-lokasi-proyek"><span class="header-section-number">6.2</span> Debit Banjir di Lokasi Proyek</h2>
+<p>Perhitungan debit banjir di lokasi proyek menggunakan metode yang disarankan oleh SNI 2415:2016 Tentang Tata Cara Perhitungan Debit Banjir yaitu metode hidrograf Snyder. Persamaan dari hidrograf satuan sintetik Snyder-Alexesey sebagai berikut:</p>
+<p><strong>Menentukan lag-time</strong></p>
+<p>tp = 1. 1 – 1. 4(L. Lg) 0.3 &nbsp;&nbsp; dalam jam</p>
+<p>dimana:</p>
+<p>tp = log-time dan titik berat hujan efektif selama tr ke puncak Hidrograph dalam jam</p>
+<p>L = jarak dari stasiun ke batas teratas dari daerah pengaliran dalam km</p>
+<p>Lg =jarak dari stasiun ke titik berat daerah pengaliran dalam km</p>
+<div id="fig-hss_snyder" class="quarto-figure quarto-figure-center quarto-float anchored" data-fig-align="center">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-hss_snyder-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="figures/hss_snyder.png" class="img-fluid quarto-figure quarto-figure-center figure-img">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-hss_snyder-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Gambar&nbsp;12: Hidrograf Satuan Sintetis Menurut Snyders
+</figcaption>
+</figure>
+</div>
 </section>
 <section id="debit-banjir-di-sungai-tengar" class="level2" data-number="6.3">
 <h2 data-number="6.3" class="anchored" data-anchor-id="debit-banjir-di-sungai-tengar"><span class="header-section-number">6.3</span> Debit Banjir di Sungai Tengar</h2>
