--- a/main_report.html
+++ b/main_report.html
@@ -284,37 +284,13 @@ Gambar&nbsp;3: Resume Data Hujan
 </div>
 <div class="cell">
 <div class="cell-output-display">
-<div id="fig-matrixplot-rainfall-1" class="quarto-figure quarto-figure-center quarto-float anchored">
+<div id="fig-matrixplot-rainfall" class="quarto-figure quarto-figure-center quarto-float anchored">
 <figure class="quarto-float quarto-float-fig figure">
-<div aria-describedby="fig-matrixplot-rainfall-1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div aria-describedby="fig-matrixplot-rainfall-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="main_report_files/figure-html/fig-matrixplot-rainfall-1.png" class="img-fluid figure-img" width="672">
 </div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-matrixplot-rainfall-1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-matrixplot-rainfall-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Gambar&nbsp;4: Matrixplot Data Hujan Bulanan
-</figcaption>
-</figure>
-</div>
-</div>
-<div class="cell-output-display">
-<div id="fig-matrixplot-rainfall-2" class="quarto-figure quarto-figure-center quarto-float anchored">
-<figure class="quarto-float quarto-float-fig figure">
-<div aria-describedby="fig-matrixplot-rainfall-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="main_report_files/figure-html/fig-matrixplot-rainfall-2.png" class="img-fluid figure-img" width="672">
-</div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-matrixplot-rainfall-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;5: Matrixplot Data Hujan Bulanan
-</figcaption>
-</figure>
-</div>
-</div>
-<div class="cell-output-display">
-<div id="fig-matrixplot-rainfall-3" class="quarto-figure quarto-figure-center quarto-float anchored">
-<figure class="quarto-float quarto-float-fig figure">
-<div aria-describedby="fig-matrixplot-rainfall-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="main_report_files/figure-html/fig-matrixplot-rainfall-3.png" class="img-fluid figure-img" width="672">
-</div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-matrixplot-rainfall-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;6: Matrixplot Data Hujan Bulanan
 </figcaption>
 </figure>
 </div>
@@ -329,23 +305,23 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
 <div aria-describedby="tbl-matrixplot-rainfall-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell-output-display">
 <div>
-<div id="vksbrwsnhb" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#vksbrwsnhb table {
+<div id="gadhntbarc" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#gadhntbarc table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#vksbrwsnhb thead, #vksbrwsnhb tbody, #vksbrwsnhb tfoot, #vksbrwsnhb tr, #vksbrwsnhb td, #vksbrwsnhb th {
+#gadhntbarc thead, #gadhntbarc tbody, #gadhntbarc tfoot, #gadhntbarc tr, #gadhntbarc td, #gadhntbarc th {
   border-style: none;
 }
 
-#vksbrwsnhb p {
+#gadhntbarc p {
   margin: 0;
   padding: 0;
 }
 
-#vksbrwsnhb .gt_table {
+#gadhntbarc .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -371,12 +347,12 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-left-color: #D3D3D3;
 }
 
-#vksbrwsnhb .gt_caption {
+#gadhntbarc .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#vksbrwsnhb .gt_title {
+#gadhntbarc .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -388,7 +364,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-width: 0;
 }
 
-#vksbrwsnhb .gt_subtitle {
+#gadhntbarc .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -400,7 +376,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-top-width: 0;
 }
 
-#vksbrwsnhb .gt_heading {
+#gadhntbarc .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -412,13 +388,13 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#vksbrwsnhb .gt_bottom_border {
+#gadhntbarc .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#vksbrwsnhb .gt_col_headings {
+#gadhntbarc .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -433,7 +409,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#vksbrwsnhb .gt_col_heading {
+#gadhntbarc .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -453,7 +429,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   overflow-x: hidden;
 }
 
-#vksbrwsnhb .gt_column_spanner_outer {
+#gadhntbarc .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -465,15 +441,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 4px;
 }
 
-#vksbrwsnhb .gt_column_spanner_outer:first-child {
+#gadhntbarc .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#vksbrwsnhb .gt_column_spanner_outer:last-child {
+#gadhntbarc .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#vksbrwsnhb .gt_column_spanner {
+#gadhntbarc .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -485,11 +461,11 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   width: 100%;
 }
 
-#vksbrwsnhb .gt_spanner_row {
+#gadhntbarc .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#vksbrwsnhb .gt_group_heading {
+#gadhntbarc .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -515,7 +491,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   text-align: left;
 }
 
-#vksbrwsnhb .gt_empty_group_heading {
+#gadhntbarc .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -530,15 +506,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   vertical-align: middle;
 }
 
-#vksbrwsnhb .gt_from_md > :first-child {
+#gadhntbarc .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#vksbrwsnhb .gt_from_md > :last-child {
+#gadhntbarc .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#vksbrwsnhb .gt_row {
+#gadhntbarc .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -557,7 +533,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   overflow-x: hidden;
 }
 
-#vksbrwsnhb .gt_stub {
+#gadhntbarc .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -570,7 +546,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#vksbrwsnhb .gt_stub_row_group {
+#gadhntbarc .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -584,15 +560,15 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   vertical-align: top;
 }
 
-#vksbrwsnhb .gt_row_group_first td {
+#gadhntbarc .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#vksbrwsnhb .gt_row_group_first th {
+#gadhntbarc .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#vksbrwsnhb .gt_summary_row {
+#gadhntbarc .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -602,16 +578,16 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#vksbrwsnhb .gt_first_summary_row {
+#gadhntbarc .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#vksbrwsnhb .gt_first_summary_row.thick {
+#gadhntbarc .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#vksbrwsnhb .gt_last_summary_row {
+#gadhntbarc .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -621,7 +597,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#vksbrwsnhb .gt_grand_summary_row {
+#gadhntbarc .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -631,7 +607,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#vksbrwsnhb .gt_first_grand_summary_row {
+#gadhntbarc .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -641,7 +617,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-top-color: #D3D3D3;
 }
 
-#vksbrwsnhb .gt_last_grand_summary_row_top {
+#gadhntbarc .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -651,11 +627,11 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#vksbrwsnhb .gt_striped {
+#gadhntbarc .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#vksbrwsnhb .gt_table_body {
+#gadhntbarc .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -664,7 +640,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-bottom-color: #D3D3D3;
 }
 
-#vksbrwsnhb .gt_footnotes {
+#gadhntbarc .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -678,7 +654,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#vksbrwsnhb .gt_footnote {
+#gadhntbarc .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -687,7 +663,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#vksbrwsnhb .gt_sourcenotes {
+#gadhntbarc .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -701,7 +677,7 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   border-right-color: #D3D3D3;
 }
 
-#vksbrwsnhb .gt_sourcenote {
+#gadhntbarc .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -709,63 +685,63 @@ Tabel&nbsp;2: Jumlah Hujan Bulanan (mm)
   padding-right: 5px;
 }
 
-#vksbrwsnhb .gt_left {
+#gadhntbarc .gt_left {
   text-align: left;
 }
 
-#vksbrwsnhb .gt_center {
+#gadhntbarc .gt_center {
   text-align: center;
 }
 
-#vksbrwsnhb .gt_right {
+#gadhntbarc .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#vksbrwsnhb .gt_font_normal {
+#gadhntbarc .gt_font_normal {
   font-weight: normal;
 }
 
-#vksbrwsnhb .gt_font_bold {
+#gadhntbarc .gt_font_bold {
   font-weight: bold;
 }
 
-#vksbrwsnhb .gt_font_italic {
+#gadhntbarc .gt_font_italic {
   font-style: italic;
 }
 
-#vksbrwsnhb .gt_super {
+#gadhntbarc .gt_super {
   font-size: 65%;
 }
 
-#vksbrwsnhb .gt_footnote_marks {
+#gadhntbarc .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#vksbrwsnhb .gt_asterisk {
+#gadhntbarc .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#vksbrwsnhb .gt_indent_1 {
+#gadhntbarc .gt_indent_1 {
   text-indent: 5px;
 }
 
-#vksbrwsnhb .gt_indent_2 {
+#gadhntbarc .gt_indent_2 {
   text-indent: 10px;
 }
 
-#vksbrwsnhb .gt_indent_3 {
+#gadhntbarc .gt_indent_3 {
   text-indent: 15px;
 }
 
-#vksbrwsnhb .gt_indent_4 {
+#gadhntbarc .gt_indent_4 {
   text-indent: 20px;
 }
 
-#vksbrwsnhb .gt_indent_5 {
+#gadhntbarc .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -1188,7 +1164,7 @@ L_{n}X_{t}=\overline{L_{n}X}+S_{LnXi}G \\\overline{L_{n}X}=\frac{1}n{L_{n}X_{i}}
 <img src="main_report_files/figure-html/fig-rainfall-pdf-1.png" class="img-fluid figure-img" width="672">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-rainfall-pdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;7: Grafik PDF Curah Hujan Harian
+Gambar&nbsp;5: Grafik PDF Curah Hujan Harian
 </figcaption>
 </figure>
 </div>
@@ -1202,7 +1178,7 @@ Gambar&nbsp;7: Grafik PDF Curah Hujan Harian
 <img src="main_report_files/figure-html/fig-rainfall-cdf-1.png" class="img-fluid figure-img" width="672">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-rainfall-cdf-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;8: Grafik PDF Curah Hujan Harian
+Gambar&nbsp;6: Grafik PDF Curah Hujan Harian
 </figcaption>
 </figure>
 </div>
@@ -1216,7 +1192,7 @@ Gambar&nbsp;8: Grafik PDF Curah Hujan Harian
 <img src="main_report_files/figure-html/fig-rainfall-frequency-1.png" class="img-fluid figure-img" width="672">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-rainfall-frequency-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;9: Analisa Frekuensi Curah Hujan Rencana
+Gambar&nbsp;7: Analisa Frekuensi Curah Hujan Rencana
 </figcaption>
 </figure>
 </div>
@@ -1248,7 +1224,7 @@ Tabel&nbsp;3: Nilai Koefisien Limpasan
 <img src="figures/kondisi_tutupan_lahan.jpg" class="img-fluid quarto-figure quarto-figure-center figure-img" width="495">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-tutupan_lahan-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;10: Kondisi Tutupan Lahan di Sekitar Tapak Proyek
+Gambar&nbsp;8: Kondisi Tutupan Lahan di Sekitar Tapak Proyek
 </figcaption>
 </figure>
 </div>
@@ -1261,14 +1237,14 @@ Gambar&nbsp;10: Kondisi Tutupan Lahan di Sekitar Tapak Proyek
 <h1 data-number="6"><span class="header-section-number">6</span> Analisa Debit Banjir</h1>
 <section id="bagan-alir-perhitungan-debit-banjir" class="level2" data-number="6.1">
 <h2 data-number="6.1" class="anchored" data-anchor-id="bagan-alir-perhitungan-debit-banjir"><span class="header-section-number">6.1</span> Bagan Alir Perhitungan Debit Banjir</h2>
-<p>Berdasarkan SNI 2415-2016 tentang “Tata Cara Perhitungan Debit Banjir Rencana”, bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;11</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
+<p>Berdasarkan SNI 2415-2016 tentang “Tata Cara Perhitungan Debit Banjir Rencana”, bagan alir perhitungan banjir dapat dilihat pada <a href="#fig-bagan_alir" class="quarto-xref">Gambar&nbsp;9</a> yang memperlihatkan prosedur umum yang diperlukan untuk menghitung debit banjir berdasarkan ketersediaan data di lapangan.</p>
 <div id="fig-bagan_alir" class="quarto-figure quarto-figure-center quarto-float anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-bagan_alir-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <img src="figures/bagan_alir_banjir.png" class="img-fluid quarto-figure quarto-figure-center figure-img">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-bagan_alir-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;11: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 Hal 6)
+Gambar&nbsp;9: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 Hal 6)
 </figcaption>
 </figure>
 </div>
@@ -1289,10 +1265,22 @@ Gambar&nbsp;11: Bagan Alir Perhitungan Debit Rencana (Diolah dari SNI 2415:2016 
 <img src="figures/hss_snyder.png" class="img-fluid quarto-figure quarto-figure-center figure-img">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-hss_snyder-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Gambar&nbsp;12: Hidrograf Satuan Sintetis Menurut Snyders
+Gambar&nbsp;10: Hidrograf Satuan Sintetis Menurut Snyders
 </figcaption>
 </figure>
 </div>
+<p><strong>Lama hujan efektif</strong></p>
+<p>Tp1 = tp + 0. 25(tr – te)</p>
+<p><strong>Rise to peak</strong></p>
+<p>Tp = tp +0. 5. tr</p>
+<p><strong>Peak discharge (l/det), untuk hujan efektif 1 mm pada 1 km<sup>2</sup></strong></p>
+<p><span class="math display">\[
+\displaylines{
+\mathrm{q}_{p}^{}={\frac{275.{C}_{p}}{tp}}\\
+}
+\]</span></p>
+<p>Peak discharge untuk hujan efektif 1 inci (25. 4 mm) pada daerah seluas A km2, dalam m<sup>2</sup>/det</p>
+<p>Setelah didapat bentuk hidrograph satuannya, maka dilakukan perhitungan debit banjir akibat hujan rencana.</p>
 </section>
 <section id="debit-banjir-di-sungai-tengar" class="level2" data-number="6.3">
 <h2 data-number="6.3" class="anchored" data-anchor-id="debit-banjir-di-sungai-tengar"><span class="header-section-number">6.3</span> Debit Banjir di Sungai Tengar</h2>
